refactor to change .toList methods
closes #28

we were using the Stream.toList() method, causing problems on some parts
of the system since that method creates immutable list (and on those
parts of the system, we were manipulating the list).

instead, Collectors.toList() method is used.