@@ -16,6 +16,7 @@ import ovh.migmolrod.food.ordering.system.restaurant.service.domain.valueobject.
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class RestaurantDataAccessMapper {
@@ -23,7 +24,7 @@ public class RestaurantDataAccessMapper {
 	public List<UUID> restaurantToRestaurantProducts(Restaurant restaurant) {
 		return restaurant.getOrderDetail().getProducts().stream()
 				.map(product -> product.getId().getValue())
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 	public Restaurant restaurantEntityToRestaurant(List<RestaurantEntity> restaurantEntities) {
@@ -37,7 +38,7 @@ public class RestaurantDataAccessMapper {
 						.price(new Money(entity.getProductPrice()))
 						.available(entity.getProductAvailable())
 						.build()
-		).toList();
+		).collect(Collectors.toList());
 
 		return Restaurant.builder()
 				.restaurantId(new RestaurantId(restaurantEntity.getRestaurantId()))
